# mesonet

./: .gitignore  LICENSE  README.md  mesonet.sh  pyproject.toml
src/mesonet/: __init__.py  __main__.py  cli.py
