[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesonet"
dynamic = ["version"]
description = "Pull live data from a Purdue Mesonet station (no API key / login)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Levi Starrett", email = "levi@roxsoftware.com" }]
keywords = ["weather", "mesonet", "purdue", "precipitation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/leviathan747/mesonet"
Repository = "https://github.com/leviathan747/mesonet"

[project.scripts]
mesonet = "mesonet.cli:main"

[tool.hatch.version]
path = "src/mesonet/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mesonet"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
